--- a/sass/style.scss
+++ b/sass/style.scss
@@ -21,9 +21,10 @@ body {
 }
 
 .splash-foto {
+   height: 100vh;
    height: 100%;
-   width: 100%;; 
-   position: relative;;
+   width: 100%; 
+   position: relative;
 }
 
 .splash {
@@ -105,4 +106,17 @@ h1 {
     padding: 15px;
     background-color: hsl(54, 98%, 49%);
     border-radius: 5px;
+}
+
+/*services*/
+
+.container {
+    padding: 80px 100px
+}
+
+.section-title {
+    text-align: center;
+    h2 {
+        color: black;
+    }
 }
