--- a/sass/style.scss
+++ b/sass/style.scss
@@ -118,5 +118,7 @@ h1 {
     text-align: center;
     h2 {
         color: black;
+        font-family: $font-1;
+        font-style: normal;
     }
 }
