--- a/sass/style.css
+++ b/sass/style.css
@@ -56,7 +56,6 @@ li {
   padding-top: 15px;
   display: inline-block;
   color: white;
-  text-decoration: none;
   text-transform: uppercase;
   font-family: "Lato", sans-serif;
   font-size: 18px;
@@ -64,6 +63,8 @@ li {
 
 li a {
   margin-right: 25px;
+  text-decoration: none;
+  color: white;
 }
 
 .splash-center {
