--- a/sass/style.scss
+++ b/sass/style.scss
@@ -220,3 +220,108 @@ p {
  .contact-wrapper {
     padding-left: 100px;
  }
+
+ @media (max-width: 850px) {
+    .footer-container {
+        padding: 15px 85px;
+    }
+ }
+
+ @media (max-width: 770px) {
+    .contact-wrapper {
+        padding-left: 30px;
+    }
+ }
+
+ @media (max-width: 550px) {
+    .splash-center {
+        padding-top: 40px;
+        h1 {
+            font-size: 40px;
+        }
+    }
+    .services {
+        .section-wrapper {
+            justify-content: center;
+            .box {
+                padding: 15px 15px;
+            }
+        }
+    }
+    .portfolio {
+        .container {
+            padding-left: 150px;
+        }
+    }
+ }
+
+ @media (max-width: 500px) {
+    .footer-container {
+        padding: 0 0;
+    }
+    .footer-text {
+        padding-left: 50px;
+    }
+    .contact-wrapper {
+        padding-left: 0;
+        padding-right: 15px;
+    }
+    .portfolio {
+        .container {
+            padding-left: 65px;
+        }
+    }
+    .container {
+        padding: 65px;
+    }
+    .services {
+        .section-wrapper {
+            justify-content: center;
+            .box {
+                padding: 15px 15px;
+            }
+        }
+    }
+    .up-wrapper {
+        padding: 0;
+        li {
+            font-size: 15px;
+        }
+    }
+    .splash-center {
+        padding-top: 40px;
+        h1 {
+            font-size: 40px;
+        }
+    }
+ }
+
+ @media (max-width: 430px) {
+    .portfolio {
+        .container {
+            padding-left: 65px;
+            padding-right: 65px;
+        }
+    }
+ }
+
+ @media (max-width: 300px) {
+    .portfolio {
+        .container {
+            padding-left: 45px;
+        }
+    }
+    .up-wrapper {
+        padding-top: 35px;
+    }
+    .splash-center {
+        max-width: 90%;
+        padding-top: 65px;
+        h1 {
+            padding-bottom: 55px;
+        }
+        a {
+            font-size: 20px;
+        }
+    }
+ }  
