--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,4 +1,3 @@
-
 /*global*/
 $font-1: 'Lato', sans-serif;
 $font-2: 'Yellowtail', cursive;
@@ -6,322 +5,299 @@ $font-2: 'Yellowtail', cursive;
 *,
 *::before,
 *::after {
-    box-sizing: border-box;
+	box-sizing: border-box;
 }
 
 body {
-    margin: 0;
-    font-family: $font-1;
+	margin: 0;
+	font-family: $font-1;
 }
 
 /*splash*/
 
 .foto-wrapper {
-    display: flex;
-    flex-wrap: wrap;
-    background-size: cover;
+	display: flex;
+	flex-wrap: wrap;
+	background-size: cover;
     background-image: url("https://images.pexels.com/photos/163143/sackcloth-sackcloth-textured-laptop-ipad-163143.jpeg");
-    height: 100vh;
+	height: 100vh;
 }
 
 .splash-foto {
-   height: 100vh;
-   height: 100%;
-   width: 100%; 
-   position: relative;
+	height: 100vh;
+	height: 100%;
+	width: 100%;
+	position: relative;
 }
 
 .splash {
-    height: 100vh;
+	height: 100vh;
 }
 
 
 .up-wrapper {
-    position: absolute;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    width: 100%;
-    padding-top: 40px;
+	position: absolute;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-between;
+	width: 100%;
+	padding-top: 40px;
 }
 
 .h3-wrapper {
-    flex: 0 0 50%;
+	flex: 0 0 50%;
 }
 
 .mark-name {
-    color: hsl(54, 88%, 51%);
-    position: absolute;
-    padding-left: 100px;
-    font-size: 30px;
-    font-family: $font-2;
+	color: hsl(54, 88%, 51%);
+	position: absolute;
+	padding-left: 100px;
+	font-size: 30px;
+	font-family: $font-2;
 }
 
 .nav-wrapper {
-    flex: 0 0 50%;
+	flex: 0 0 50%;
 }
 
 li {
-    padding-top: 15px;
-    display: inline-block;
-    color: white;
-    text-transform: uppercase;
-    font-family: $font-1;
-    font-size: 18px;
-    a {
-        margin-right: 25px;
-        text-decoration: none;
-        color: white;
-    }
+	padding-top: 15px;
+	display: inline-block;
+	color: white;
+	text-transform: uppercase;
+	font-family: $font-1;
+	font-size: 18px;
+	a {
+		margin-right: 25px;
+		text-decoration: none;
+		color: white;
+	}
 }
 
 .splash-center {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    display: block;
-    margin: auto;
-    justify-content: center;
-    text-align: center;
-    max-width: 70%;
-    max-height: 40%;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	display: block;
+	margin: auto;
+	justify-content: center;
+	text-align: center;
+	max-width: 70%;
+	max-height: 40%;
 }
 
 h2 {
-    color: white;
-    font-family: $font-1;
-    font-style: italic;
-    font-weight: 200;
+	color: white;
+	font-family: $font-1;
+	font-style: italic;
+	font-weight: 200;
 }
 
 h1 {
-    color: white;
-    text-transform: uppercase;
-    font-family: $font-1;
-    font-size: 70px;
+	color: white;
+	text-transform: uppercase;
+	font-family: $font-1;
+	font-size: 70px;
 }
 
 .button {
-    color: white;
-    text-decoration: none;
-    font-size: 25px;
-    font-weight: bolder;
-    font-family: $font-1;
-    padding: 15px;
-    background-color: hsl(51, 93%, 52%);
-    border-radius: 5px;
+	color: white;
+	text-decoration: none;
+	font-size: 25px;
+	font-weight: bolder;
+	font-family: $font-1;
+	padding: 15px;
+	background-color: hsl(51, 93%, 52%);
+	border-radius: 5px;
 }
 
 /*services*/
 
 .container {
-    padding: 80px 100px
+	padding: 80px 100px;
 }
 
 .section-title {
-    text-align: center;
-    h2 {
-        color: black;
-        font-family: $font-1;
-        font-style: normal;
-        font-size: 30px;
-        font-weight: 900;
-        text-transform: uppercase;
-    }
-    p {
-        font-style: italic;
-    }
+	text-align: center;
+	h2 {
+		color: black;
+		font-family: $font-1;
+		font-style: normal;
+		font-size: 30px;
+		font-weight: 900;
+		text-transform: uppercase;
+	}
+	p {
+		font-style: italic;
+	}
 }
 
 .section-wrapper {
-    padding-top: 30px;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
+	padding-top: 30px;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-between;
 }
 
 .box {
-    flex: 0 0 33.333%;
-    padding: 0 15px;
-    text-align: center;
-    .box-title {
-        font-size: 20px;
-        text-transform: uppercase;
-    }
+	flex: 0 0 33.333%;
+	padding: 0 15px;
+	text-align: center;
+	.box-title {
+		font-size: 20px;
+		text-transform: uppercase;
+	}
 }
 
 .fa-solid {
-    font-size: 30px;
-    color:hsl(51, 93%, 52%);
-    background-color: rgb(255, 255, 255);
-    width: 60px;
-    height: 60px;
-    line-height: 60px;
-    border-style: solid;
-    border-color: #f6d413;
-    border-radius: 50%;
+	font-size: 30px;
+	color: hsl(51, 93%, 52%);
+	background-color: rgb(255, 255, 255);
+	width: 60px;
+	height: 60px;
+	line-height: 60px;
+	border-style: solid;
+	border-color: #f6d413;
+	border-radius: 50%;
 }
 
 /*portfolio*/
 
 .portfolio {
-    background: #f8f6ee;
+	background: #f8f6ee;
 }
 
 .box-portfolio {
-    width: 250px;
-    height: 350px;
-    background: white;
-    text-align: center;
-    flex: 0 0 33.333%;
+	width: 250px;
+	height: 350px;
+	background: white;
+	text-align: center;
+	flex: 0 0 33.333%;
 }
 
 .image-wrapper {
-    width: 250px;
-    height: 250px;
-    position: relative;
+	width: 250px;
+	height: 250px;
+	position: relative;
 }
 img {
-    width: 250px;
-    height: 250px;
-    object-fit: cover;
-    position: arelative;
+	width: 250px;
+	height: 250px;
+	object-fit: cover;
+	position: arelative;
 }
 
 p {
-    color: #706b60;
-    font-weight: 200;
- }
- /*contact*/ 
+	color: #706b60;
+	font-weight: 200;
+}
+/*contact*/
 
- .contact-list {
-    font-size: 0;
- }
+.contact-list {
+	font-size: 0;
+}
 
- .contact {
-    font-size: 15px;
-    background-color: black;
-    color: #ffffff;
-    width: 30px;
-    height: 30px;
-    line-height: 30px;
-    border-radius: 50%;
-    text-align: center;
- }
+.contact {
+	font-size: 15px;
+	background-color: black;
+	color: #ffffff;
+	width: 30px;
+	height: 30px;
+	line-height: 30px;
+	border-radius: 50%;
+	text-align: center;
+}
 
- .footer-container {
-    padding: 15px 100px;
-    display: inline-flex;
-    justify-content: space-between;
-    align-items: center;
- }
+.footer-container {
+	padding: 15px 100px;
+	display: inline-flex;
+	justify-content: space-between;
+	align-items: center;
+}
 
- .contact-wrapper {
-    padding-left: 100px;
- }
+.contact-wrapper {
+	padding-left: 100px;
+}
 
- @media (max-width: 850px) {
-    .footer-container {
-        padding: 15px 85px;
-    }
- }
+@media (min-width: 745px) and (max-width: 845px) {
+	.contact-wrapper {
+		padding-left: 0;
+	}
+}
 
- @media (max-width: 770px) {
-    .contact-wrapper {
-        padding-left: 30px;
-    }
- }
+@media (min-width: 660px) and (max-width: 744px) {
+	.section-wrapper {
+		justify-content: center;
+	}
+	.footer-container {
+		padding: 15px 50px;
+	}
+	.contact-wrapper {
+		padding-left: 0;
+	}
+}
 
- @media (max-width: 550px) {
-    .splash-center {
-        padding-top: 40px;
-        h1 {
-            font-size: 40px;
-        }
-    }
-    .services {
-        .section-wrapper {
-            justify-content: center;
-            .box {
-                padding: 15px 15px;
-            }
-        }
-    }
-    .portfolio {
-        .container {
-            padding-left: 150px;
-        }
-    }
- }
+@media (min-width: 450px) and (max-width: 659px) {
+	.nav-wrapper {
+		li {
+			display: block;
+		}
+	}
+	.mark-name {
+		padding-left: 50px;
+	}
+	.splash-center {
+		padding-top: 130px;
+		h1 {
+			font-size: 50px;
+		}
+	}
+	.section-wrapper {
+		justify-content: center;
+		display: block;
+	}
+	.footer-container {
+		display: inline;
+		p {
+			margin-left: 80px;
+		}
+	}
+}
 
- @media (max-width: 500px) {
-    .footer-container {
-        padding: 0 0;
-    }
-    .footer-text {
-        padding-left: 50px;
-    }
-    .contact-wrapper {
-        padding-left: 0;
-        padding-right: 15px;
-    }
-    .portfolio {
-        .container {
-            padding-left: 65px;
-        }
-    }
-    .container {
-        padding: 65px;
-    }
-    .services {
-        .section-wrapper {
-            justify-content: center;
-            .box {
-                padding: 15px 15px;
-            }
-        }
-    }
-    .up-wrapper {
-        padding: 0;
-        li {
-            font-size: 15px;
-        }
-    }
-    .splash-center {
-        padding-top: 40px;
-        h1 {
-            font-size: 40px;
-        }
-    }
- }
-
- @media (max-width: 430px) {
-    .portfolio {
-        .container {
-            padding-left: 65px;
-            padding-right: 65px;
-        }
-    }
- }
-
- @media (max-width: 300px) {
-    .portfolio {
-        .container {
-            padding-left: 45px;
-        }
-    }
-    .up-wrapper {
-        padding-top: 35px;
-    }
-    .splash-center {
-        max-width: 90%;
-        padding-top: 65px;
-        h1 {
-            padding-bottom: 55px;
-        }
-        a {
-            font-size: 20px;
-        }
-    }
- }  
+@media (min-width: 280px) and (max-width: 449px) {
+	.nav-wrapper {
+		li {
+			display: block;
+		}
+	}
+	.mark-name {
+		padding-left: 30px;
+	}
+	.splash-center {
+		padding-top: 120px;
+		h1 {
+			font-size: 35px;
+		}
+		a {
+			font-size: 15px;
+		}
+	}
+	.section-wrapper {
+		justify-content: center;
+	}
+	.section-title {
+		h2 {
+			text-align: center;
+		}
+	}
+	.footer-container {
+		display: inline;
+		p {
+			margin-left: 80px;
+		}
+	}
+	.contact-wrapper {
+		padding-left: 0;
+	}
+}
